todoqueue_frontend/src/components/navbar/navigation.css
.navbar {
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    width: 100%;
    z-index: 1020;
}

.navbar-center-panel {
    display: flex;
    align-items: center;
    flex-direction: row;
    align-items: center;
    gap: 20px;
}

/* Adjustments for smaller screens (less than 800px) */
@media (max-width: 800px) {
    .navbar-center-panel {
        margin-top: 10px;
        /* Add some space above the household selector */
    }
}

/* Adjustments for larger screens (more than 800px) */
@media (min-width: 800px) {
    .navbar-center-panel {
        position: absolute;
        top: 50%;
        left: 50%;
        transform: translateX(-50%) translateY(-50%);
    }
}

.fullscreen-icon {
    display: flex;
    align-items: center;
    justify-content: center;
    border: none;
    background: transparent;
    margin-left: 1vw;
    cursor: pointer;
}

.household-select {
    width: 15rem;
    padding: 3px;
    border: 1px solid #8d8d8d;
    border-radius: 5px;
    font-size: 16px;
    color: #ffffff;
    background-color: #212528;
    background-image: url("data:image/svg+xml;charset=UTF8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 5'%3E%3Cpath fill='%23000000' d='M2 0L0 2h4zm0 5L0 3h4z'/%3E%3C/svg%3E");
    background-repeat: no-repeat;
    background-position: right 0.7em top 50%;
    background-size: 0.65em auto;
    appearance: none;
}

.household-select:focus {
    border-color: #007bff;
    outline: none;
    box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, .25);
}

.navbar-link {
    padding-left: 2vw;
    padding-right: 2vw;
}

.navbar-logo-fullscreen-container {
    display: flex;
    align-items: center;
}

.navbar-links-container {
    display: flex;
    align-items: center;
    flex-wrap: wrap;
}

/* Adjustments for large screens */
@media (min-width: 800px) {
    .navbar-expand-lg .navbar-toggler {
        display: none;
    }
}

@media (min-width: 800px) {
    .navbar-links-container {
        justify-content: space-between;
    }
}

@media (max-width: 800px) {
    .logout-link {
        margin-top: 25px;
    }
}

.burger-button {
    margin-right: 0.75rem;
}

@media (min-width: 800px) {
    .navbar-links-right {
        margin-right: 1em;
    }
}

